--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "aos": "^2.3.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
